# vocal

./: .gitignore  README.md  attributes.py  environment.yml  make_vocabs.py  pyproject.toml  setup.py
definitions/: dimensions.py  test.py  variables.py
faam_data/: __init__.py  attributes.py  constants.py  core.py  dataset.py  dimension.py  group.py  netcdf.py  schema_types.py  templates.py  training.py  utils.py  validation.py  variable.py  writers.py
faam_data/attributes/: __init__.py  globals.py  group.py  variable.py
faam_data/definitions/: __init__.py  dimensions.py
faam_data/definitions/core-test_faam_yyyymmdd_rN_nxxx/: __init__.py  definition.yaml
faam_data/definitions/core_faam_yyyymmdd_v005_rN_nxxx/: dataset.py  definition.yaml  variables.py
faam_data/definitions/core_faam_yyyymmdd_v005_rN_nxxx_1hz/: dataset.py  variables.py
faam_data/docs/metadata/: Makefile  conf.py  index.rst  introduction.rst  preproc.py
scripts/: vocal  vocal_init
vocal/: checking.py  core.py  dataset.py  field.py  mixins.py  netcdf.py  schema_types.py  training.py  utils.py  validation.py  variable.py  vocab.py  writers.py
vocal/application/: __init__.py  build.py  check.py  create_version.py  create_vocabs.py  eg_data.py  fetch.py  init.py  register.py  release.py  web.py
vocal/cli/: vocal.py
vocal/netcdf/: __init__.py  writer.py
vocal/training/: __init__.py  training.py
vocal/types/: __init__.py  numpy_types.py  schema_types.py
vocal/utils/: __init__.py  conventions.py  mixins.py  registry.py
vocal/web/: api.py  models.py  utils.py
(+16 files in other folders)
